--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<p>Hi {{title}}</p>
 <app-header></app-header>
-<app-form></app-form>
+<app-form *ngIf="Register" (Register)="toRegister($event)"></app-form>
+<app-register *ngIf="!Register" (Signup)="toRegister($event)"></app-register>
